Update from https://github.com/thebesttv/eserver-static/commit/6916be428076f42b0d2e2b5053b78cc421134eec

--- a/content/daily/2022-10-10.html
+++ b/content/daily/2022-10-10.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-10-20 03:07 -->
+<!-- 2022-10-20 15:55 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>念念不忘, 真的有回响吗?</title>
@@ -36,7 +36,7 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org2bafb96">1. Concat Images</a></li>
+<li><a href="#org1fee8d9">1. Concat Images</a></li>
 </ul>
 </div>
 </nav>
@@ -46,28 +46,28 @@
 </p>
 
 
-<figure id="org710a74b">
+<figure id="org37c311f">
 <img src="2022-10-10/1.jpg" alt="1.jpg" width="40%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">Figure 1: </span>还愿</figcaption>
 </figure>
 
 
-<figure id="orge565c95">
+<figure id="orgd997239">
 <img src="2022-10-10/2.jpg" alt="2.jpg" width="40%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">Figure 2: </span>起因</figcaption>
 </figure>
 
 
-<figure id="org6d5fe85">
+<figure id="org9cf3ce3">
 <img src="2022-10-10/3.jpg" alt="3.jpg" width="40%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">Figure 3: </span>结果</figcaption>
 </figure>
 
-<div id="outline-container-org2bafb96" class="outline-2">
-<h2 id="org2bafb96"><span class="section-number-2">1.</span> <a href="#org2bafb96">Concat Images</a></h2>
+<div id="outline-container-org1fee8d9" class="outline-2">
+<h2 id="org1fee8d9"><span class="section-number-2">1.</span> <a href="#org1fee8d9">Concat Images</a></h2>
 <div class="outline-text-2" id="text-1">
 <p>
 woc学到一个很方便的东西<sup><a id="fnr.1" class="footref" href="#fn.1" role="doc-backlink">1</a></sup>, <code>convert</code> yyds!
@@ -97,7 +97,7 @@ convert image1.png image2.png +append result.png
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2022-10-10 12:22</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-10-10 12:40</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-20 03:07</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-20 15:55</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/daily/2022-10-10.org">content/daily/2022-10-10.org</a></td></tr>
 </table>
