--- a/content/daily/2022-09-28.html
+++ b/content/daily/2022-09-28.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-10-20 03:07 -->
+<!-- 2022-10-20 15:55 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>保研回忆录</title>
@@ -36,19 +36,19 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org9a2d95f">1. 暑假</a>
+<li><a href="#org025a266">1. 暑假</a>
 <ul>
-<li><a href="#orgd85d22a">1.1. 夏令营</a></li>
+<li><a href="#orgdef2d1f">1.1. 夏令营</a></li>
 </ul>
 </li>
-<li><a href="#org84a5d78">2. 打工</a></li>
-<li><a href="#org8412f56">3. 我的928</a>
+<li><a href="#org4389027">2. 打工</a></li>
+<li><a href="#org3b6eaa6">3. 我的928</a>
 <ul>
-<li><a href="#orgd41c470">3.1. 928演唱会(bushi</a></li>
+<li><a href="#org0cf5cd5">3.1. 928演唱会(bushi</a></li>
 </ul>
 </li>
-<li><a href="#org1c12f58">4. 他们的928</a></li>
-<li><a href="#org705efd8">5. 总结</a></li>
+<li><a href="#org7ae742e">4. 他们的928</a></li>
+<li><a href="#org1df487b">5. 总结</a></li>
 </ul>
 </div>
 </nav>
@@ -58,7 +58,7 @@
 </p>
 
 
-<figure id="orgb1d1781">
+<figure id="org16ca002">
 <img src="2022-09-28/928-nju.jpg" alt="928-nju.jpg" width="80%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">Figure 1: </span>南大offer</figcaption>
@@ -81,8 +81,8 @@
 <li><a href="http://www.cskaoyan.com/thread-237791-1-1.html">中科院计算所实验室情况简要介绍</a></li>
 </ul>
 
-<div id="outline-container-org9a2d95f" class="outline-2">
-<h2 id="org9a2d95f"><span class="section-number-2">1.</span> <a href="#org9a2d95f">暑假</a></h2>
+<div id="outline-container-org025a266" class="outline-2">
+<h2 id="org025a266"><span class="section-number-2">1.</span> <a href="#org025a266">暑假</a></h2>
 <div class="outline-text-2" id="text-1">
 <p>
 夏令营之前我是很想去计算所学体系结构的,
@@ -106,8 +106,8 @@
 </p>
 </div>
 
-<div id="outline-container-orgd85d22a" class="outline-3">
-<h3 id="orgd85d22a"><span class="section-number-3">1.1.</span> <a href="#orgd85d22a">夏令营</a></h3>
+<div id="outline-container-orgdef2d1f" class="outline-3">
+<h3 id="orgdef2d1f"><span class="section-number-3">1.1.</span> <a href="#orgdef2d1f">夏令营</a></h3>
 <div class="outline-text-3" id="text-1-1">
 <p>
 被直接拒的学校
@@ -149,8 +149,8 @@
 </div>
 </div>
 
-<div id="outline-container-org84a5d78" class="outline-2">
-<h2 id="org84a5d78"><span class="section-number-2">2.</span> <a href="#org84a5d78">打工</a></h2>
+<div id="outline-container-org4389027" class="outline-2">
+<h2 id="org4389027"><span class="section-number-2">2.</span> <a href="#org4389027">打工</a></h2>
 <div class="outline-text-2" id="text-2">
 <p>
 跟了wy之后就开始学静态分析了, 还是继续看三下没看完的南大程序分析课,
@@ -164,8 +164,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-org8412f56" class="outline-2">
-<h2 id="org8412f56"><span class="section-number-2">3.</span> <a href="#org8412f56">我的928</a></h2>
+<div id="outline-container-org3b6eaa6" class="outline-2">
+<h2 id="org3b6eaa6"><span class="section-number-2">3.</span> <a href="#org3b6eaa6">我的928</a></h2>
 <div class="outline-text-2" id="text-3">
 <p>
 928还算平静, 照着群里的通知一步步做就行了.
@@ -181,8 +181,8 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 </div>
 
-<div id="outline-container-orgd41c470" class="outline-3">
-<h3 id="orgd41c470"><span class="section-number-3">3.1.</span> <a href="#orgd41c470">928演唱会(bushi</a></h3>
+<div id="outline-container-org0cf5cd5" class="outline-3">
+<h3 id="org0cf5cd5"><span class="section-number-3">3.1.</span> <a href="#org0cf5cd5">928演唱会(bushi</a></h3>
 <div class="outline-text-3" id="text-3-1">
 <p>
 演唱会是在二运开的, 和jdh一起去听着玩, 一开始因为没有门票被挡在外面,
@@ -190,7 +190,7 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 
 
-<figure id="org16491fb">
+<figure id="org42feee5">
 <img src="2022-09-28/outside.jpg" alt="outside.jpg" width="60%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">Figure 2: </span>被挡在外面</figcaption>
@@ -202,7 +202,7 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 
 
-<figure id="org64d464a">
+<figure id="orgea9623b">
 <img src="2022-09-28/auditorium.jpg" alt="auditorium.jpg" width="80%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">Figure 3: </span>在观众席上</figcaption>
@@ -215,8 +215,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-org1c12f58" class="outline-2">
-<h2 id="org1c12f58"><span class="section-number-2">4.</span> <a href="#org1c12f58">他们的928</a></h2>
+<div id="outline-container-org7ae742e" class="outline-2">
+<h2 id="org7ae742e"><span class="section-number-2">4.</span> <a href="#org7ae742e">他们的928</a></h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li>翔去了复旦NLP</li>
@@ -236,8 +236,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-org705efd8" class="outline-2">
-<h2 id="org705efd8"><span class="section-number-2">5.</span> <a href="#org705efd8">总结</a></h2>
+<div id="outline-container-org1df487b" class="outline-2">
+<h2 id="org1df487b"><span class="section-number-2">5.</span> <a href="#org1df487b">总结</a></h2>
 <div class="outline-text-2" id="text-5">
 <p>
 保研最难的两关都过了, 也貌似遇到了不错的导师.
@@ -252,7 +252,7 @@ p.s. IDEA 写 Java 是真的方便
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2022-09-28 16:27</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-09-29 10:48</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-20 03:07</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-20 15:55</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/daily/2022-09-28.org">content/daily/2022-09-28.org</a></td></tr>
 </table>
