--- a/content/daily/2022-09-28.html
+++ b/content/daily/2022-09-28.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-10-21 09:59 -->
+<!-- 2022-10-21 10:02 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>保研回忆录</title>
@@ -36,19 +36,19 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orge47c4d6">1. 暑假</a>
+<li><a href="#org99a0fe3">1. 暑假</a>
 <ul>
-<li><a href="#org781203f">1.1. 夏令营</a></li>
+<li><a href="#orgc7d3272">1.1. 夏令营</a></li>
 </ul>
 </li>
-<li><a href="#org43bd6cb">2. 打工</a></li>
-<li><a href="#org35d3416">3. 我的928</a>
+<li><a href="#org782d822">2. 打工</a></li>
+<li><a href="#orgb60d6ff">3. 我的928</a>
 <ul>
-<li><a href="#org8919777">3.1. 928演唱会(bushi</a></li>
+<li><a href="#org026ebe9">3.1. 928演唱会(bushi</a></li>
 </ul>
 </li>
-<li><a href="#org7f7bf8d">4. 他们的928</a></li>
-<li><a href="#org4a884a5">5. 总结</a></li>
+<li><a href="#org7e0fe3d">4. 他们的928</a></li>
+<li><a href="#org4e9afc6">5. 总结</a></li>
 </ul>
 </div>
 </nav>
@@ -58,7 +58,7 @@
 </p>
 
 
-<figure id="org472fef7">
+<figure id="org69a3d8a">
 <img src="2022-09-28/928-nju.jpg" alt="928-nju.jpg" width="80%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">Figure 1: </span>南大offer</figcaption>
@@ -81,8 +81,8 @@
 <li><a href="http://www.cskaoyan.com/thread-237791-1-1.html">中科院计算所实验室情况简要介绍</a></li>
 </ul>
 
-<div id="outline-container-orge47c4d6" class="outline-2">
-<h2 id="orge47c4d6"><span class="section-number-2">1.</span> <a href="#orge47c4d6">暑假</a></h2>
+<div id="outline-container-org99a0fe3" class="outline-2">
+<h2 id="org99a0fe3"><span class="section-number-2">1.</span> <a href="#org99a0fe3">暑假</a></h2>
 <div class="outline-text-2" id="text-1">
 <p>
 夏令营之前我是很想去计算所学体系结构的,
@@ -106,8 +106,8 @@
 </p>
 </div>
 
-<div id="outline-container-org781203f" class="outline-3">
-<h3 id="org781203f"><span class="section-number-3">1.1.</span> <a href="#org781203f">夏令营</a></h3>
+<div id="outline-container-orgc7d3272" class="outline-3">
+<h3 id="orgc7d3272"><span class="section-number-3">1.1.</span> <a href="#orgc7d3272">夏令营</a></h3>
 <div class="outline-text-3" id="text-1-1">
 <p>
 被直接拒的学校
@@ -149,8 +149,8 @@
 </div>
 </div>
 
-<div id="outline-container-org43bd6cb" class="outline-2">
-<h2 id="org43bd6cb"><span class="section-number-2">2.</span> <a href="#org43bd6cb">打工</a></h2>
+<div id="outline-container-org782d822" class="outline-2">
+<h2 id="org782d822"><span class="section-number-2">2.</span> <a href="#org782d822">打工</a></h2>
 <div class="outline-text-2" id="text-2">
 <p>
 跟了wy之后就开始学静态分析了, 还是继续看三下没看完的南大程序分析课,
@@ -164,8 +164,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-org35d3416" class="outline-2">
-<h2 id="org35d3416"><span class="section-number-2">3.</span> <a href="#org35d3416">我的928</a></h2>
+<div id="outline-container-orgb60d6ff" class="outline-2">
+<h2 id="orgb60d6ff"><span class="section-number-2">3.</span> <a href="#orgb60d6ff">我的928</a></h2>
 <div class="outline-text-2" id="text-3">
 <p>
 928还算平静, 照着群里的通知一步步做就行了.
@@ -181,8 +181,8 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 </div>
 
-<div id="outline-container-org8919777" class="outline-3">
-<h3 id="org8919777"><span class="section-number-3">3.1.</span> <a href="#org8919777">928演唱会(bushi</a></h3>
+<div id="outline-container-org026ebe9" class="outline-3">
+<h3 id="org026ebe9"><span class="section-number-3">3.1.</span> <a href="#org026ebe9">928演唱会(bushi</a></h3>
 <div class="outline-text-3" id="text-3-1">
 <p>
 演唱会是在二运开的, 和jdh一起去听着玩, 一开始因为没有门票被挡在外面,
@@ -190,7 +190,7 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 
 
-<figure id="org339a163">
+<figure id="org4a632df">
 <img src="2022-09-28/outside.jpg" alt="outside.jpg" width="60%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">Figure 2: </span>被挡在外面</figcaption>
@@ -202,7 +202,7 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 
 
-<figure id="orgf813e98">
+<figure id="orga5818b5">
 <img src="2022-09-28/auditorium.jpg" alt="auditorium.jpg" width="80%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">Figure 3: </span>在观众席上</figcaption>
@@ -215,8 +215,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-org7f7bf8d" class="outline-2">
-<h2 id="org7f7bf8d"><span class="section-number-2">4.</span> <a href="#org7f7bf8d">他们的928</a></h2>
+<div id="outline-container-org7e0fe3d" class="outline-2">
+<h2 id="org7e0fe3d"><span class="section-number-2">4.</span> <a href="#org7e0fe3d">他们的928</a></h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li>翔去了复旦NLP</li>
@@ -236,8 +236,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-org4a884a5" class="outline-2">
-<h2 id="org4a884a5"><span class="section-number-2">5.</span> <a href="#org4a884a5">总结</a></h2>
+<div id="outline-container-org4e9afc6" class="outline-2">
+<h2 id="org4e9afc6"><span class="section-number-2">5.</span> <a href="#org4e9afc6">总结</a></h2>
 <div class="outline-text-2" id="text-5">
 <p>
 保研最难的两关都过了, 也貌似遇到了不错的导师.
@@ -252,7 +252,7 @@ p.s. IDEA 写 Java 是真的方便
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2022-09-28 16:27</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-09-29 10:48</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-21 09:59</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-21 10:02</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/daily/2022-09-28.org">content/daily/2022-09-28.org</a></td></tr>
 </table>
