--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-10-21 09:59 -->
+<!-- 2022-10-21 10:02 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>小渴栈</title>
@@ -37,7 +37,7 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org2d8c980">1. 文章列表</a></li>
+<li><a href="#org290f3e7">1. 文章列表</a></li>
 </ul>
 </div>
 </nav>
@@ -47,18 +47,18 @@
 </p>
 
 <p>
-用 <a href="https://github.com/githubocto/repo-visualizer">repo-visualizer</a> 生成对 <a href="https://github.com/thebesttv/eserver-static">eserver-static</a> 的可视化, 如图 <a href="#org1f1fb78">1</a> 所示.
+用 <a href="https://github.com/githubocto/repo-visualizer">repo-visualizer</a> 生成对 <a href="https://github.com/thebesttv/eserver-static">eserver-static</a> 的可视化, 如图 <a href="#orgfb7cd0d">1</a> 所示.
 </p>
 
 
-<figure id="org1f1fb78">
+<figure id="orgfb7cd0d">
 <img src="./diagram.svg" alt="diagram.svg" class="org-svg" width="90%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">Figure 1: </span>博客内容可视化</figcaption>
 </figure>
 
-<div id="outline-container-org2d8c980" class="outline-2">
-<h2 id="org2d8c980"><span class="section-number-2">1.</span> <a href="#org2d8c980">文章列表</a></h2>
+<div id="outline-container-org290f3e7" class="outline-2">
+<h2 id="org290f3e7"><span class="section-number-2">1.</span> <a href="#org290f3e7">文章列表</a></h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
 <li><a href="index.html">小渴栈</a></li>
@@ -91,7 +91,7 @@
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2022-09-25 09:20</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-09-27 21:44</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-21 09:59</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-21 10:02</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/index.org">index.org</a></td></tr>
 </table>
